--- a/source/public/index.html
+++ b/source/public/index.html
@@ -192,7 +192,7 @@
     </div>
 
     <!-- JS Libraries -->
-    <!-- # Axios http -->
+    <!-- # Axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- # Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
