Search Function Implementation

--- a/source/public/index.html
+++ b/source/public/index.html
@@ -103,8 +103,8 @@
             <!-- TODO: System for filtering -->
 
             <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search for a recipe!" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <input id='RecipeSearchBar' class="form-control me-2" type="search" placeholder="Search for a recipe!" aria-label="Search">
+                <button id='RecipeSearchBtn' class="btn btn-outline-success" type="button">Search</button>
             </form>
         </div>
     </aside>
