--- a/source/public/recipe.html
+++ b/source/public/recipe.html
@@ -345,6 +345,10 @@ Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam dolorem, corpor
 
         <!-- Corner Action Buttons (default: invisible) -->
         <div id="cornerBtns" class="d-flex flex-column gap-2 invisible">
+            <button id="bookmarkBtn" class="btn btn-success rounded-pill pt-2" data-bs-toggle="tooltip"
+            data-bs-placement="left" title="bookmark recipe">
+            <i class="fa-solid fa-star"></i>
+            </button>
             <button id="addBtn" class="btn btn-primary rounded-pill pt-2" data-bs-toggle="tooltip"
                 data-bs-placement="left" title="Add recipe">
                 <i class="fa-solid fa-plus"></i>
