Finalize bookmark functionality (#45)

--- a/source/public/index.html
+++ b/source/public/index.html
@@ -139,7 +139,7 @@
                 </div>
 
                 <!-- Template Card -->
-                <div class="recipe-card col-xl-6 d-none">
+                <div id="templateCard" class="recipe-card col-xl-6 d-none">
                     <!-- Recipe Card -->
                     <div class="card h-100">
                         <div class="row g-0 align-items-center">
