--- a/source/public/recipe.html
+++ b/source/public/recipe.html
@@ -97,7 +97,8 @@
                                 <label for="tagsInput" class="form-label">
                                     <i class="fa-solid fa-tags"></i> Tags
                                 </label>
-                                <input type="text" class="form-control" id="tagsInput" value="Holiday, Snack" placeholder="Tag 1, Tag 2, etc.">
+                                <input type="text" class="form-control" id="tagsInput" value="Holiday, Snack"
+                                    placeholder="Tag 1, Tag 2, etc.">
                             </div>
 
                             <!-- Edit Prep Time -->
@@ -345,9 +346,9 @@ Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam dolorem, corpor
 
         <!-- Corner Action Buttons (default: invisible) -->
         <div id="cornerBtns" class="d-flex flex-column gap-2 invisible">
-            <button id="bookmarkBtn" class="btn btn-success rounded-pill pt-2" data-bs-toggle="tooltip"
-            data-bs-placement="left" title="bookmark recipe">
-            <i class="fa-solid fa-star"></i>
+            <button id="bookmarkBtn" class="btn btn-primary rounded-pill pt-2" data-bs-toggle="tooltip"
+                data-bs-placement="left" title="Bookmark recipe">
+                <i class="fa-solid fa-bookmark"></i>
             </button>
             <button id="addBtn" class="btn btn-primary rounded-pill pt-2" data-bs-toggle="tooltip"
                 data-bs-placement="left" title="Add recipe">
