--- a/source/public/recipe.html
+++ b/source/public/recipe.html
@@ -267,7 +267,7 @@ Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam dolorem, corpor
                 <article id="nutritionDiv" class="mb-3">
                     <a class="text-decoration-none fw-bold" href="#nutritionInfo" role="button"
                         data-bs-toggle="collapse" aria-controls="nutritionInfo">
-                        Expand nutrition <i class="fa-solid fa-caret-down"></i>
+                        Expand nutrition (1 serving) <i class="fa-solid fa-caret-down"></i>
                     </a>
                     <div id="nutritionInfo" class="collapse">
                         <ul class="list-inline mb-0">
@@ -320,8 +320,8 @@ Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam dolorem, corpor
                     <article id="ingredientsDiv" class="col-4 text-start">
                         <h3 class="mb-3">
                             Ingredients
-                            <button class="btn border ms-md-2" data-bs-toggle="tooltip"
-                                title="Choose items to add to grocery list">
+                            <button id="groceryBtn" class="btn border ms-md-2" data-bs-toggle="tooltip"
+                                title="Add ingredients to grocery list">
                                 <i class="fa-solid fa-plus"></i>
                                 <i class="fa-solid fa-basket-shopping"></i>
                             </button>
