--- a/source/public/grocery-list.html
+++ b/source/public/grocery-list.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -62,8 +61,8 @@
     </aside>
 
     <!-- Drawer -->
-    <aside id="drawer" class="offcanvas show offcanvas-start position-static h-100" data-bs-scroll="true"
-        data-bs-backdrop="false" tabindex="-1" aria-labelledby="drawerLabel">
+    <aside id="drawer" class="offcanvas offcanvas-start h-100" data-bs-scroll="true" data-bs-backdrop="false"
+        tabindex="-1" aria-labelledby="drawerLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="drawerLabel">Grocery List</h5>
 
@@ -75,34 +74,6 @@
         </div>
 
         <div class="offcanvas-body">
-            <div class="nav flex-column nav-pills w-100 me-3" id="recipeTabs" role="grocerylist"
-                aria-orientation="vertical">
-                <!-- recipe lists in the drawer -->
-                <button class="nav-link active" id="groceryRecipe1" data-bs-toggle="pill" data-bs-target="#groceryRecipe1"
-                    type="button" role="tab" aria-controls="groceryRecipe1" aria-selected="true">
-                    Green Tea Noodles With Sticky Sweet Chilli Salmon Recipe
-                </button>
-                <button class="nav-link" id="groceryRecipe2" data-bs-toggle="pill" data-bs-target="#groceryRecipe2"
-                    type="button" role="tab" aria-controls="groceryRecipe2" aria-selected="false">
-                    Sesame Beef With Gochujang Udon Noodles Recipe
-                </button>
-                <button class="nav-link" id="groceryRecipe3" data-bs-toggle="pill" data-bs-target="#groceryRecipe3"
-                    type="button" role="tab" aria-controls="groceryRecipe3" aria-selected="false">
-                    Silverbeet Fatteh With Sumac Yoghurt And Chickpeas Recipe
-                </button>
-                <button class="nav-link" id="groceryRecipe4" data-bs-toggle="pill" data-bs-target="#groceryRecipe4"
-                    type="button" role="tab" aria-controls="groceryRecipe4" aria-selected="false">
-                    Tomato Vodka Rigatoni Recipe
-                </button>
-                <button class="nav-link" id="groceryRecipe5" data-bs-toggle="pill" data-bs-target="#groceryRecipe5"
-                    type="button" role="tab" aria-controls="groceryRecipe5" aria-selected="false">
-                    Lemon Chicken Recipe
-                </button>
-                <button class="nav-link" id="groceryRecipe6" data-bs-toggle="pill" data-bs-target="#groceryRecipe6"
-                    type="button" role="tab" aria-controls="groceryRecipe6" aria-selected="false">
-                    Iceberg With Dried Oregano Dressing And Creamy Sheep's Milk Cheese Recipe
-                </button>
-            </div>
         </div>
     </aside>
 
@@ -112,32 +83,29 @@
             <section id="groceryListDiv" class="container">
                 <h2 class="text-center">Grocery List</h2>
 
-                <!-- Template Ingredient Category in Grocery page -->
-                <div id="groceryCategory" style="padding-left: 20px; background-color: rgb(65, 65, 85); color: white; display: flex; width: 100%;">
-                    <div style="text-transform: uppercase; padding: 10px 0px;">
-                        Category Sample
-                    </div>
-                </div>
+                <h4 id="emptyListHeading" class="text-center">
+                    Click the grocery button (<button id="groceryBtn" class="btn border">
+                        <i class="fa-solid fa-plus"></i>
+                        <i class="fa-solid fa-basket-shopping"></i>
+                    </button>) while viewing one of your recipes to add ingredients to the grocery list.
+                </h4>
 
-                <div style="padding-left: 20px; display: flex; width: 100%;">
-                    <div style="margin-top: 10px; margin-right: 10px; margin-bottom: 10px;width: 10px; height: 10px; background-color: rgb(26, 20, 54);"></div>
-                    
-                    <div style="padding-right: 20px; width: 100%; display: flex;">
-                        <button class="groceryIngredient" id="groceryIngredient" data-bs-toggle="pill" data-bs-target="#groceryIngredient"
-                            type="button" role="tab" aria-controls="groceryIngredient" style="padding-left: 20px; background-color: rgb(219, 220, 235); display: flex; width: 100%;">
-                            Ingredient sample 1
+                <div id="templateIngredientList" class="d-none mb-3">
+                    <div class="recipe-header bg-primary text-light d-flex 
+                        align-items-center justify-content-between w-100 px-2 mb-2">
+                        <div>
+                            <span class="recipe-name fw-bold">Recipe Name</span>
+                            (<a href="#" class="recipe-link link-light">Link</a>)
+                        </div>
+                        <button class="remove-btn btn btn-danger d-block my-2">
+                            <i class="fas fa-trash"></i> Remove
                         </button>
                     </div>
-                </div>
-
-                <div style="padding-left: 20px; display: flex; width: 100%;">
-                    <div style="margin-top: 10px; margin-right: 10px; margin-bottom: 10px;width: 10px; height: 10px; background-color: rgb(26, 20, 54);"></div>
-                    
-                    <div style="padding-right: 20px; width: 100%; display: flex;">
-                        <button class="groceryIngredient" id="groceryIngredient" data-bs-toggle="pill" data-bs-target="#groceryIngredient"
-                            type="button" role="tab" aria-controls="groceryIngredient" style="padding-left: 20px; background-color: rgb(219, 220, 235); display: flex; width: 100%;">
-                            Ingredient sample 1
-                        </button>
+                    <div class="template-check form-check">
+                        <input class="form-check-input" type="checkbox" value="">
+                        <label class="ingredient form-check-label">
+                            Default checkbox
+                        </label>
                     </div>
                 </div>
             </section>
@@ -152,6 +120,7 @@
 
     <!-- Custom JS -->
     <script src="/scripts/main.js"></script>
+    <script src="/scripts/main.grocery-list.js"></script>
 </body>
 
 </html>
