Finalize meal planner functionality

--- a/source/public/index.html
+++ b/source/public/index.html
@@ -98,7 +98,7 @@
             </div>
 
             <form action="#" class="mb-3">
-                <label for="recipeSearchBar">Search</label>
+                <label for="recipeSearchBar" class="form-label">Search</label>
                 <input id="recipeSearchBar" class="form-control" type="search" placeholder="Search recipes by title!"
                     aria-label="Search">
             </form>
